courses/non-cert-prep/cloudformation/udemy_cf_beg_to_int/5_conditions_outputs/section-5-activity-template/section-5-activity-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Section 5 Activity template. 
  It launches a web server EC2 instance with separate security groups for HTTP and SSH access. 
  It creates an EBS volume and attaches it to the EC2 instance.

########################################################################################################################
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - 
        Label:
          default: VPC Settings
        Parameters:
          - VpcId
          - WebServerSubnet
      - 
        Label:
          default: Web Server Settings
        Parameters:
          - KeyPairName
      - 
        Label:
          default: EBS Volume Settings
        Parameters:
          - EbsVolumeSize
#          - EbsVolumeAZ

    ParameterLabels:
      VpcId:
        default: Select a VPC
      WebServerSubnet:
        default: Select a subnet for the web server
      KeyPairName:
        default: Select an EC2 key pair 

########################################################################################################################
Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id 
  WebServerSubnet:
    Type: AWS::EC2::Subnet::Id
    Description: It should be in the same VPC.
  EbsVolumeSize:
    Type: Number
    Description: Size in GiB
    Default: 10 
#  EbsVolumeAZ:
#    Type: AWS::EC2::AvailabilityZone::Name
#    Description: Availability Zone of the EBS volume
  KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
  Environment:
    Type: String
    AllowedValues: [test, prod]
    Default: test
  EnableSshAccess:
    Type: String
    AllowedValues: [true, false]
    Default: false

########################################################################################################################
Conditions:
  EnvironmentIsProd: !Equals [!Ref Environment, prod]
  EnableSshAccess: !Equals [!Ref EnableSshAccess, true]

Mappings:
  RegionImages:
    eu-west-1:
      ImageId: ami-07683a44e80cd32c5
    us-east-1:
      ImageId: ami-0de53d8956e8dcf80

########################################################################################################################
Resources:
  
  WebServerInstance:
    Type: AWS::EC2::Instance 
    Properties:
      InstanceType: t2.micro
      SubnetId: !Ref WebServerSubnet 
      ImageId: !FindInMap [ RegionImages, !Ref 'AWS::Region', ImageId ]
      KeyName: !If [EnableSshAccess, !Ref KeyPairName, !Ref AWS::NoValue]
      SecurityGroupIds:
        - !Ref HttpSecurityGroup
        - !If [EnableSshAccess, !Ref SshSecurityGroup, !Ref AWS::NoValue]
      Tags:
        -
          Key: Name
          Value: !Sub '${AWS::StackName}-WebServer'


  # Security groups allowing access to different ports
  HttpSecurityGroup:
    Type: AWS::EC2::SecurityGroup 
    Properties:
      GroupDescription: Security group for HTTP access
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        -
          CidrIp: 0.0.0.0/0 
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80

  SshSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Condition: EnableSshAccess
    Properties:
      GroupDescription: Security group to allow SSH access 
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        -
          CidrIp: 0.0.0.0/0 
          IpProtocol: tcp
          FromPort: 22 
          ToPort: 22


  # EBS Volume that should be created in the same AZ 
  # with the WebServerInstance
  EbsVolume:
    Type: AWS::EC2::Volume
    Condition: EnvironmentIsProd
    Properties:
      AvailabilityZone: !GetAtt [WebServerInstance, AvailabilityZone]
      VolumeType: gp2
      Size: !Ref EbsVolumeSize
      Tags:
        - 
          Key: Name
          Value: !Sub '${AWS::StackName}-Volume'

  VolumeAttachment:
    Type: AWS::EC2::VolumeAttachment
    Condition: EnvironmentIsProd
    Properties:
      Device: /dev/sdf
      InstanceId: !Ref WebServerInstance
      VolumeId: !Ref EbsVolume

########################################################################################################################
Outputs:
  WebServerId:
    Value: !Ref WebServerInstance
  WebserverDns:
    Value: !GetAtt [WebServerInstance, PublicDnsName]
  EbsVolumeId:
    Condition: EnvironmentIsProd
    Value: !Ref EbsVolume
